# models/bodys.go
@@ -65,3 +65,14 @@ type AgregarComentarioSoporteRequest struct {
 	CambioEstadoId string `json:"cambio_estado_id"`
 	Comentario     string `json:"comentario"`
 }
+
+type BodyHistoricoRequest struct {
+	Anios          []int    `json:"Anios"`
+	Meses          []int    `json:"Meses"`
+	Vigencias      []int    `json:"Vigencias"`
+	Proveedores    []int    `json:"Proveedores"`
+	Estados        []string `json:"Estados"`
+	Dependencias   []string `json:"Dependencias"`
+	Contratos      []string `json:"Contratos"`
+	TiposContratos []int    `json:"TiposContratos"`
+}
