# routers/commentsRouter_controllers.go
@@ -99,15 +99,6 @@ func init() {
 
 	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:SoportesCumplidoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:SoportesCumplidoController"],
 		beego.ControllerComments{
-			Method:           "AgregarComentarioSoporte",
-			Router:           "/comentario-soporte",
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:SoportesCumplidoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:SoportesCumplidoController"],
-		beego.ControllerComments{
 			Method:           "SubirSoporteCumplido",
 			Router:           "/soportes",
 			AllowHTTPMethods: []string{"post"},
@@ -133,20 +124,19 @@ func init() {
 			Filters:          nil,
 			Params:           nil})
 
-	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:SoportesCumplidoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:SoportesCumplidoController"],
+	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:HistoricoCumplidosController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:HistoricoCumplidoController"],
 		beego.ControllerComments{
-			Method:           "EliminarSoporteCumplido",
-			Router:           "/soportes/:soporte_pago_id",
-			AllowHTTPMethods: []string{"delete"},
+			Method:           "ObtenerHistorico",
+			Router:           "/cambio-estado/:cumplido_proveedor_id",
+			AllowHTTPMethods: []string{"get"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
 			Params:           nil})
-
-	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:HistoricoCumplidoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:HistoricoCumplidoController"],
+	beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:HistoricoCumplidosController"] = append(beego.GlobalControllerRouter["github.com/udistrital/revision_cumplidos_proveedores_mid/controllers:HistoricoCumplidosController"],
 		beego.ControllerComments{
-			Method:           "ObtenerHistorico",
-			Router:           "/historico_cumplido/:cumplido_proveedor_id",
-			AllowHTTPMethods: []string{"get"},
+			Method:           "ObtenerHistoricoCumplidos",
+			Router:           "/filtro-cumplidos",
+			AllowHTTPMethods: []string{"post"},
 			MethodParams:     param.Make(),
 			Filters:          nil,
 			Params:           nil})
