# swagger/swagger.json
@@ -29,13 +29,89 @@
                 }
             }
         },
-        "/historico/historico_cumplido/{cumplido_proveedor_id}": {
+        "/historico-cumplidos/filtro-cumplidos": {
+            "post": {
+                "tags": [
+                    "historico-cumplidos"
+                ],
+                "description": "Obtiene el historico de los cumplidos dependiendo de varios filtros",
+                "operationId": "HistoricoCumplidosController.ObtenerHistoricoCumplidos",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "Anios",
+                        "description": "años de los cumplidos a consultar",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "Meses",
+                        "description": "meses de los cumplidos a consultar",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "Vigencias",
+                        "description": "vigencias de los cumplidos a consultar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "Proveedores",
+                        "description": "proveedores de los cumplidos a consultar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "Estados",
+                        "description": "estados de los cumplidos a consultar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "Dependencias",
+                        "description": "dependencias de los cumplidos a consultar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "Contratos",
+                        "description": "contratos de los cumplidos a consultar",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CumplidosFiltrados"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "{object} map[string]interface{}"
+                    }
+                }
+            }
+        },
+        "/historico-cumplidos/historico_cumplido/{cumplido_proveedor_id}": {
             "get": {
                 "tags": [
-                    "historico"
+                    "historico-cumplidos"
                 ],
                 "description": "Generar el historico de los estado por lo que ha pasado un cumplido proveedor",
-                "operationId": "HistoricoCumplidoController.ObtenerHistoricoDeCumplido",
+                "operationId": "HistoricoCumplidosController.ObtenerHistoricoDeCumplido",
                 "parameters": [
                     {
                         "in": "path",
@@ -599,6 +675,40 @@
                 "VigenciaContrato": {
                     "type": "integer",
                     "format": "int64"
+                }
+            }
+        },
+        "models.CumplidosFiltrados": {
+            "title": "CumplidosFiltrados",
+            "type": "object",
+            "properties": {
+                "Dependencia": {
+                    "type": "string"
+                },
+                "Estado": {
+                    "type": "string"
+                },
+                "FechaCambioEstado": {
+                    "type": "string"
+                },
+                "Mes": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "NombreProveedor": {
+                    "type": "string"
+                },
+                "NumeroContrato": {
+                    "type": "string"
+                },
+                "Rp": {
+                    "type": "string"
+                },
+                "TipoContrato": {
+                    "type": "string"
+                },
+                "Vigencia": {
+                    "type": "string"
                 }
             }
         },
